--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -29,10 +29,12 @@ nav h1 a{
 
 nav ul {
     display: flex;
-    gap: 30px;
     list-style: none;
     align-items: center;
     font-size: 16px;
+}
+nav ul > * + *{
+    margin-left: 30px;
 }
 
 nav ul a {
@@ -72,7 +74,10 @@ nav ul #close-menu {
     nav ul.active {
         transform: translateX(0);
     }
-
+    nav ul > * + *{
+        margin-left: unset;
+        margin-top: 20px;
+    }
     nav ul a {
         color: white;
     }
