--- a/src/pages/HomePage/AboutSection/AboutSection.css
+++ b/src/pages/HomePage/AboutSection/AboutSection.css
@@ -12,17 +12,11 @@
 }
 #about{
     display: flex;
-    gap:40px;
     justify-content: center;
     align-items: center;
 }
-#mission{
-    display: flex;
-    gap:40px;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
+#about > * + *{
+    margin-left: 50px;
 }
 .about-left{
     position: relative;
@@ -110,8 +104,10 @@
 }
 .values-content{
     display: flex;
-    gap:30px;
     justify-content: center;
+}
+.values-content > * + *{
+    margin-left: 30px;
 }
 .values-content .center{
     width: 350px;
@@ -142,6 +138,16 @@
     margin: 20px 0 0;
     font-size: 15px;
 }
+#mission{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+#mission > * + *{
+    margin-right: 30px;
+}
 #impact{
     padding: 30px;
     width: 100%;
@@ -152,13 +158,15 @@
 .impact-wrapper{
     display: flex;
     flex-direction: row-reverse;
-    gap:30px;
     justify-content: center;
     align-items: center;
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding: 80px 0 40px;
+}
+.impact-wrapper > * + *{
+    margin-right: 30px;
 }
 .impact-wrapper div{
     width: 50%;
@@ -190,7 +198,9 @@
     .values-content{
         flex-wrap: wrap;
         justify-content: space-between;
-        gap: 20px;
+    }
+    .values-content > * + *{
+        margin-left: 0px;
     }
     .values-content .center{
         order: 2;
@@ -211,6 +221,10 @@
 @media screen and (max-width: 800px) {
     #about,#mission{
         flex-direction: column-reverse;
+    }
+    #about > * + *{
+        margin-left: 0;
+        margin-bottom: 50px;
     }
     .about-left{
         max-width: 600px;
@@ -248,6 +262,9 @@
         flex-direction: column;
         align-items: center; 
     }
+    .values-content > * + *{
+        margin-top: 30px;
+    }
     .values-content .center{
         order: unset;
         width: 100%;
@@ -270,9 +287,17 @@
     .value-cards h1{
         font-size: 19px;
     }
+    #mission > * + *{
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
     .value-cards p,
     #impact p{
         font-size: 14px;
+    }
+    .impact-wrapper > * + *{
+        margin-right: 0;
+        margin-top: 30px;
     }
     .impact-wrapper{
     flex-direction: column;
