--- a/src/pages/HomePage/Apply/Apply.css
+++ b/src/pages/HomePage/Apply/Apply.css
@@ -12,8 +12,10 @@
 }
 .apply-content{
     display: flex;
-    gap:40px;
     justify-content: center;
+}
+.apply-content > * + *{
+    margin-left: 40px;
 }
 .apply-content .lazy-load-image-background{
     flex-shrink: 0;
@@ -71,6 +73,10 @@
     .apply-content{
         flex-direction: column;
         align-items: center;
+    }
+    .apply-content > * + *{
+        margin-left: 0;
+        margin-top: 40px;
     }
     .apply-content div:nth-child(1){
         width: 100%;
