--- a/src/pages/HomePage/HeroSection/HeroSection.css
+++ b/src/pages/HomePage/HeroSection/HeroSection.css
@@ -14,7 +14,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap:50px;
+}
+.hero-section > * + *{
+    margin-left: 50px;
 }
 #hero-left h1{
     font-size: 72px;
@@ -59,6 +61,10 @@
         align-items: center;
         padding-block: 50px;
         min-height: 60vh;
+    }
+    .hero-section > * + *{
+        margin-left: 0;
+        margin-top: 50px;
     }
     #hero-left h1{
         font-size: 50px;
